Enhancing descriptions, fixing vulnerabilities
Started working on #31 to make full descriptions fully visible if the user wants to see them as opposed to just forcing truncation. While working on this, I noticed that a lot of stuff that I *didn't* want was still being rendered in descriptions. So, I'm taking a harder approach here and using an html whitelisting approach rather than a blacklisting approach. Previously, things like JS were sanitized, but now I'm really mostly only going to allow for hrefs and some basic formatting stuff - everything else will be sanitized out. Also applied some additional fixes to images, etc. just to try to minimize the likelihood of an exploit. Closes #31.

--- a/static/style.css
+++ b/static/style.css
@@ -634,6 +634,14 @@ img { display: block; }
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  border-radius: 4px;
+  transition: background var(--transition);
+}
+.feed-header-desc[data-expandable] { cursor: pointer; }
+.feed-header-desc[data-expandable]:hover { background: var(--bg-3); }
+.feed-header-desc[data-expanded] {
+  display: block;
+  overflow: visible;
 }
 
 .feed-header-actions {
